java 22, percentage matchpoint